# Skillr

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  Session.md  TODO.md  pyproject.toml  pyproject.toml~
.benchmarks/: scan_benchmark.py
.claude-plugin/: marketplace.json  plugin.json
docs/: quickstart.md
docs/brainstorms/: 2026-04-21-skillr-enhancements-requirements.md  2026-04-21-skilr-skill-routing-framework-requirements.md
docs/diagrams/: skillr-session-flow.html
docs/plans/: 2026-04-21-001-feat-skilr-implementation-plan.md  2026-04-21-skillr-enhancement-implementation-plan.md
docs/references/: agentsdk_hosting.md  agentsdk_market.md  agentsdk_mcp.md  agentsdk_permission.md  agentsdk_python_sdk.md  agentsdk_spawn.md  agentsdk_subagent.md  agentsdk_trackcost.md
hooks/: pre-commit
rust-scanner/: Cargo.toml
rust-scanner/src/: cache.rs  config.rs  error.rs  index.rs  lib.rs  main.rs  scan.rs
skills/skillr/: SKILL.md
skills/skilr/: SKILL.md
skills/skilrscan/: SKILL.md
src/skillr/: __init__.py  cache.py  config.py  history.py  indexer.py  intent.py  matcher.py  models.py  router.py  scanner.py  vectors.py
src/skilr/: config.py  indexer.py  intent.py  matcher.py  models.py  router.py  scanner.py
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_history.py  test_indexer.py  test_integration.py  test_intent.py  test_matcher.py  test_models.py  test_performance.py  test_router.py  test_rust_cli.py  test_scanner.py  test_scenarios.py  test_vectors.py
