[project]
name = "skillr"
version = "0.1.2"
description = "Skill routing framework for Claude Code — find the right Skill and assemble executable command suggestions"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "chromadb>=1.5.8",
    "fastembed>=0.8.0",
    "transformers>=5.5.4",
    "onnxruntime>=1.24.4",
    "torch>=2.11.0",
    "onnx>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "ty>=0.0.1a8",
    "ruff>=0.4.0",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-mock>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ty]
package = "skillr"
