[project]
name = "skillr"
version = "0.2.0"
description = "Skill routing framework for Claude Code — find the right Skill and assemble executable command suggestions"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.13.1",
    "chromadb>=1.5.8",
    "fastembed>=0.8.0",
    "transformers>=5.5.4",
    "onnxruntime>=1.24.4",
    "torch>=2.11.0",
    "onnx>=1.21.0",
    "duckdb>=1.5.2",
]

[project.optional-dependencies]
dev = [
    "ty>=0.0.32",
    "ruff>=0.15.0",
    "pre-commit>=3.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-benchmark>=5.2.3",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ty]
package = "skillr"
