[package]
name = "skillr-core"
version = "0.1.8"
edition = "2021"
description = "High-performance skill index scanner for Skillr — CLI binary"
authors = ["Skillr contributors"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
thiserror = "1.0"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.12"

[[bin]]
name = "skillr-core"
path = "src/main.rs"
